force-app/main/default/objects/Purchased_Items__c/Purchased_Items__c.object-meta.xml
<CustomObject>
    <label>Purchased Item Number</label>
    <nameField>
        <displayFormat>PI-{0000}</displayFormat>
        <label>Purchased Items Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Auto Number</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>