force-app/main/default/objects/Purchased_Items__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <label>Invoice</label>
    <referenceTo>Invoicee__c</referenceTo>
    <relationshipLabel>Auto Number</relationshipLabel>
    <relationshipName>Auto_Number</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>