force-app/main/default/objects/Purchased_Items__c/fields/Price_per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Price_per_Unit__c</fullName>
    <label>Price per Unit</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>