force-app/main/default/objects/Purchased_Items__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <label>Quantity</label>
    <precision>15</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>