force-app/main/default/objects/Purchased_Items__c/fields/Stock_Name__c.field-meta.xml
<CustomField>
    <fullName>Stock_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stock Name</label>
    <referenceTo>Stock__c</referenceTo>
    <relationshipLabel>Auto Number</relationshipLabel>
    <relationshipName>Purchased_Item</relationshipName>
    <type>Lookup</type>
</CustomField>