force-app/main/default/objects/Purchased_Items__c/fields/Total_price__c.field-meta.xml
<CustomField>
    <fullName>Total_price__c</fullName>
    <formula>Quantity__c  *  Price_per_Unit__c</formula>
    <label>Total price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>