force-app/main/default/objects/Purchased_Items__c/fields/Total_price_Inc_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_price_Inc_Tax__c</fullName>
    <formula>Total_price__c   +  (Tax__c  *  Total_price__c )</formula>
    <label>Total price Inc Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>