force-app/main/default/objects/Purchased_Items__c/fields/Warranty_Provider__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Provider__c</fullName>
    <label>Warranty Provider</label>
    <type>TextArea</type>
</CustomField>