force-app/main/default/objects/Purchased_Items__c/validationRules/Excess_Quantity.validationRule-meta.xml
<ValidationRule>
    <fullName>Excess_Quantity</fullName>
    <active>true</active>
    <errorConditionFormula>Quantity__c  &gt;  Stock_Name__r.Quantity__c</errorConditionFormula>
    <errorDisplayField>Invoice_Number__c</errorDisplayField>
    <errorMessage>Quantity should not be greater than Stock quantity</errorMessage>
</ValidationRule>